--- a/composer.json
+++ b/composer.json
@@ -1,24 +1,16 @@
 {
-	"name": "nette/sandbox",
-	"description": "The sandbox is a pre-packaged Nette Framework project, basic configured structure for your application.",
-	"keywords": ["framework", "mvc", "debugging", "templating", "database", "dbal", "forms", "latte", "neon", "mailing", "images", "micro"],
-	"homepage": "http://nette.org",
-	"license": ["BSD-3-Clause", "GPL-2.0", "GPL-3.0"],
-	"authors": [
-		{
-			"name": "David Grudl",
-			"homepage": "http://davidgrudl.com"
-		},
-		{
-			"name": "Nette Community",
-			"homepage": "https://github.com/nette/nette/contributors"
-		}
-	],
-	"config": {
-		"vendor-dir": "libs"
+	"name":"siliconhill/kalendar",
+	"description":"Calendar is simple application to organize events on SiliconHill club.",
+	"keywords":["siliconhill", "calendar"],
+	"license":["BSD-3-Clause", "GPL-2.0", "GPL-3.0"],
+	"config":{
+		"vendor-dir":"libs"
 	},
-	"require": {
-		"php": ">= 5.3.0",
-		"nette/nette": ">= 2.0.5"
+	"require":{
+		"php":">= 5.3.0",
+		"nette/nette":">= 2.0.5"
+	},
+	"require-dev":{
+		"phpunit/phpunit":"3.7.*"
 	}
 }
