--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,8 @@
 	},
 	"require":{
 		"php":">= 5.3.0",
-		"nette/nette":">= 2.0.5"
+		"nette/nette":">= 2.0.5",
+		"kdyby/bootstrap-form-renderer": "v1.1.0"
 	},
 	"require-dev":{
 		"phpunit/phpunit":"3.7.*"
