--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
 	"require":{
 		"php":">= 5.3.0",
 		"nette/nette":">= 2.0.5",
-		"kdyby/bootstrap-form-renderer": "v1.1.0"
+		"kdyby/bootstrap-form-renderer": "v1.1.0",
+		"kdyby/forms-replicator": "v0.9"
 	},
 	"require-dev":{
 		"phpunit/phpunit":"3.7.*"
