Změny provedené na lekci 16.1.2013

--- a/app/config/config.neon
+++ b/app/config/config.neon
@@ -30,7 +30,7 @@ common:
 
 		authorizator:
 			class: Nette\Security\IAuthorizator
-			factory: @authorizatorFactory::createForUser
+			factory: @authorizatorFactory::createForUserWithCache
 
 		authorizatorFactory:
 			class: AuthorizatorFactory
