--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,7 @@ php:
   - 5.4
 
 before_script:
+  - mysql -e 'create database myapp_test;'
   - composer install --no-interaction
 
 script: phpunit --configuration phpunit.xml
